Phone auth num check

--- a/app/src/main/res/layout/activity_parent.xml
+++ b/app/src/main/res/layout/activity_parent.xml
@@ -65,6 +65,7 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/phone_auth_num"
         android:paddingLeft="14dp"
         android:layout_gravity="center"
         android:layout_width="314dp"
