--- a/app/src/main/res/layout/activity_loginparentinfo.xml
+++ b/app/src/main/res/layout/activity_loginparentinfo.xml
@@ -21,6 +21,8 @@
             app:srcCompat="@drawable/arrow_left" />
 
         <TextView
+            android:visibility="gone"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -46,6 +48,7 @@
             >
 
             <TextView
+                android:id="@+id/school_code"
                 android:layout_width="314dp"
                 android:layout_height="47dp"
                 android:layout_gravity="center"
@@ -71,6 +74,7 @@
             android:background="@drawable/stroke">
 
             <EditText
+                android:id="@+id/grade"
                 android:layout_width="52dp"
                 android:layout_height="47dp"
                 android:background="@null"
@@ -82,6 +86,7 @@
                 android:textSize="15dp"
                 android:gravity="center"/>
             <EditText
+                android:id="@+id/devision"
                 android:layout_width="52dp"
                 android:layout_height="match_parent"
                 android:background="@null"
@@ -93,6 +98,7 @@
                 android:textSize="15dp"
                 android:gravity="center"/>
             <EditText
+                android:id="@+id/class_num"
                 android:layout_width="52dp"
                 android:layout_height="match_parent"
                 android:background="@null"
@@ -107,6 +113,7 @@
         </LinearLayout>
 
         <EditText
+            android:id="@+id/name"
             android:paddingLeft="14dp"
             android:layout_marginTop="13dp"
             android:layout_width="314dp"
@@ -115,6 +122,7 @@
             android:textSize="14dp"
             android:background="@drawable/stroke"/>
         <EditText
+            android:id="@+id/password"
             android:paddingLeft="14dp"
             android:layout_marginTop="13dp"
             android:layout_width="314dp"
@@ -132,6 +140,7 @@
             />
 
         <Button
+            android:id="@+id/complete"
             android:layout_width="306dp"
             android:layout_height="47dp"
             android:text="완료"
