--- a/app/src/main/res/layout/activity_loginparentinfo.xml
+++ b/app/src/main/res/layout/activity_loginparentinfo.xml
@@ -44,27 +44,14 @@
 
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/school_code"
+            <Spinner
+                android:id="@+id/spinner"
                 android:layout_width="314dp"
                 android:layout_height="47dp"
-                android:layout_gravity="center"
-                android:hint="학교번호 6자리"
-                android:background="@drawable/stroke"
-                android:textSize="14dp"
-                android:gravity="center_vertical"
-                android:paddingLeft="14dp"
-                />
-            <Button
-                android:layout_width="69dp"
-                android:layout_height="33dp"
-                android:layout_gravity="center_vertical|right"
-                android:layout_marginRight="14dp"
-                android:background="@drawable/auth_button"
-                android:text="찾기"/>
+                android:background="@drawable/stroke"/>
+
         </FrameLayout>
 
         <LinearLayout
@@ -75,6 +62,7 @@
 
             <EditText
                 android:id="@+id/grade"
+                android:paddingLeft="30dp"
                 android:layout_width="52dp"
                 android:layout_height="47dp"
                 android:background="@null"
@@ -87,6 +75,7 @@
                 android:gravity="center"/>
             <EditText
                 android:id="@+id/devision"
+                android:paddingLeft="30dp"
                 android:layout_width="52dp"
                 android:layout_height="match_parent"
                 android:background="@null"
@@ -99,6 +88,7 @@
                 android:gravity="center"/>
             <EditText
                 android:id="@+id/class_num"
+                android:paddingLeft="30dp"
                 android:layout_width="52dp"
                 android:layout_height="match_parent"
                 android:background="@null"
@@ -149,7 +139,6 @@
             android:background="@drawable/login_button"
 
             />
-
     </LinearLayout>
 
 
