--- a/app/src/main/res/layout/activity_parent.xml
+++ b/app/src/main/res/layout/activity_parent.xml
@@ -77,16 +77,20 @@
         android:inputType="number"
         android:maxLength="4"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <TextView
         android:drawableLeft="@drawable/phone"
-        android:layout_marginTop="86dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" 문의센터 02 1234 1234 (평일 9시 - 18시 공휴일 제외)"
         android:textSize="13dp"
         android:textColor="#9b9b9b"/>
+
     <Button
         android:id="@+id/login_button"
         android:layout_marginTop="9dp"
@@ -96,23 +100,14 @@
         android:text="로그인"
         android:textColor="#FFFFFF"
         android:textSize="17dp"
-        android:background="@drawable/login_button">
-
-    </Button>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:paddingTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Copyright Worrischool Corp. All rights Reserved"
-            android:textColor="#9b9b9b"
-            android:textSize="10dp" />
-    </LinearLayout>
-
+        android:background="@drawable/login_button"/>
+    <TextView
+        android:paddingTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Copyright Worrischool Corp. All rights Reserved"
+        android:textColor="#9b9b9b"
+        android:textSize="10dp"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
