--- a/app/src/main/res/layout/activity_parent_home.xml
+++ b/app/src/main/res/layout/activity_parent_home.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,26 +19,30 @@
                 android:orientation="vertical"
                 android:padding="20dp">
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="?android:attr/actionBarSize"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="right|center_vertical"
-                        android:paddingRight="15dp"
-                        android:text="MY"
-                        android:textSize="20sp" />
+                        android:id="@+id/btnActionBarMy"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:layout_marginRight="70dp"
+                        android:text = "MY"
+                        android:textSize="20dp"
+                        />
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="right"
+                        android:id="@+id/btnActionBarNoti"
+                        android:layout_width="22dp"
+                        android:layout_height="24dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:layout_marginRight="26dp"
                         android:src="@drawable/ic_notification" />
-                </LinearLayout>
+
+                </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -46,7 +53,7 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:paddingLeft="20dp"
+                        android:layout_marginLeft="30dp"
                         android:src="@drawable/ic_empty_profile" />
 
                     <TextView
@@ -88,6 +95,7 @@
                             android:src="@drawable/ic_parent_apply" />
 
                         <TextView
+                            android:id="@+id/classSignUpButton"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
