--- a/app/src/main/res/layout/activity_parent_profile_pic.xml
+++ b/app/src/main/res/layout/activity_parent_profile_pic.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/profilepicarrowleft"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/arrow_left"
@@ -39,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/imageView"
                     android:layout_width="78dp"
                     android:layout_height="78dp"
                     android:layout_gravity="center"
